<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_add_book"/>

    <Button
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:id="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_gravity="right"
        android:layout_marginRight="25dp">

    </Button>

    <EditText
        android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/book_name"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:layout_margin="25dp">

    </EditText>

    <EditText
        android:id="@+id/book_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:layout_margin="25dp">

    </EditText>

    <EditText
        android:id="@+id/book_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:maxLines="1"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:layout_margin="25dp">

    </EditText>

    <EditText
        android:id="@+id/book_ISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isbn"
        android:maxLines="1"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:layout_margin="25dp">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save">

        </Button>

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel">

        </Button>






    </LinearLayout>

</LinearLayout>