<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorTextBackground"
        android:textSize="58dp"
        android:fontFamily="@font/logo"
        android:textStyle="bold"
        android:layout_marginTop="80dp">

    </TextView>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/book"
        >

    </ImageView>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_textedit"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint=" Email"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/password_textedit"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:hint=" Password"
        android:layout_marginTop="10dp">

    </EditText>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@android:color/transparent"
        style="?attr/borderlessButtonStyle"
        android:textColor="@color/colorTextBackground">

    </Button>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@android:color/transparent"
        android:layout_marginTop="100dp"
        style="?attr/borderlessButtonStyle"
        android:textColor="@color/colorTextBackground"
        >

    </Button>
</LinearLayout>