<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorTextBackground"
        android:textSize="58dp"
        android:fontFamily="@font/logo"
        android:textStyle="bold"
        android:layout_marginTop="80dp">

    </TextView>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/book"
        >

    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="@color/colorTextBackground"
        android:textSize="38dp"
        android:fontFamily="@font/logo"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="It's quick and easy."
        android:textColor="@color/colorTextBackground"
        android:textSize="28dp"
        android:fontFamily="@font/logo"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/firstname_textedit"
        android:inputType="text"
        android:hint=" Firstname"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/lastname_textedit"
        android:inputType="text"
        android:hint=" Lastname"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_edittext"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/Email_textedit"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint=" Email"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/password_textedit"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:hint=" Password"
        android:layout_marginTop="10dp">

    </EditText>


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@android:color/transparent"
        style="?attr/borderlessButtonStyle"
        android:textColor="@color/colorTextBackground"
        android:layout_marginTop="10dp"
        android:textSize="16dp">

    </Button>

    <Button
        android:id="@+id/already_member_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_a_member"
        android:background="@android:color/transparent"
        android:layout_marginTop="25dp"
        style="?attr/borderlessButtonStyle"
        android:textColor="@color/colorTextBackground"
        android:textSize="12dp"
        >

    </Button>

</LinearLayout>